--- a/Projets/OhMyFood/css/style.css
+++ b/Projets/OhMyFood/css/style.css
@@ -123,6 +123,11 @@ img {
   padding-bottom: 0;
   margin-bottom: 0;
 }
+@media (orientation: landscape) {
+  img {
+    max-width: 25%;
+  }
+}
 
 th {
   padding-top: 2rem;
@@ -284,27 +289,31 @@ td {
 .font__title {
   margin: 0;
 }
-.font__title--enchantee {
-  font-family: "Devonshire";
-  font-size: 3vw;
-}
-@media (orientation: landscape) and (min-device-width: 992px) {
-  .font__title--enchantee {
-    font-size: 3vw;
+@media (orientation: landscape) {
+  .font__title {
     height: 50%;
   }
 }
+.font__title--enchantee {
+  font-family: "Devonshire";
+  font-size: 5vw;
+}
+@media (orientation: landscape) {
+  .font__title--enchantee {
+    font-size: 3vw;
+    line-height: 2.6vw;
+  }
+}
 .font__title--alafrancaise {
-  font-size: 2vw;
+  font-size: 3.5vw;
   font-family: "Croissant One";
   background: -webkit-linear-gradient(-80deg, #e38a12 0%, #a56799 50%, #8f5aff 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-@media (orientation: landscape) and (min-device-width: 992px) {
+@media (orientation: landscape) {
   .font__title--alafrancaise {
     font-size: 2vw;
-    height: 50%;
   }
 }
 @media (min-device-width: 991px) and (max-device-width: 1280px) and (max-width: 991px) {
@@ -315,15 +324,14 @@ td {
 .font__title--papilles {
   font-family: "cookie";
   font-weight: normal;
-  font-size: 3.5vw;
+  font-size: 6vw;
   background: -webkit-linear-gradient(-80deg, #0228dd 0%, #0670f3 50%, #229df9 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-@media (orientation: landscape) and (min-device-width: 992px) {
+@media (orientation: landscape) {
   .font__title--papilles {
     font-size: 3.5vw;
-    height: 50%;
   }
 }
 @media (min-device-width: 991px) and (max-device-width: 1280px) and (max-width: 991px) {
@@ -334,15 +342,14 @@ td {
 .font__title--gout {
   font-family: "kaushan script";
   font-weight: normal;
-  font-size: 3.5vw;
+  font-size: 5vw;
   background: -webkit-linear-gradient(-80deg, #41963c 0%, #80cb5e 50%, #beff7f 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-@media (orientation: landscape) and (min-device-width: 992px) {
+@media (orientation: landscape) {
   .font__title--gout {
     font-size: 3.5vw;
-    height: 50%;
   }
 }
 @media (min-device-width: 991px) and (max-device-width: 1280px) and (max-width: 991px) {
@@ -351,12 +358,22 @@ td {
   }
 }
 .font__subtitle {
-  font-size: 3.5vw;
+  font-size: 5vw;
+}
+@media (orientation: landscape) {
+  .font__subtitle {
+    font-size: 3vw;
+  }
 }
 .font__subtitle--enchantee {
   font-family: "Segoe Print";
   font-weight: bold;
   margin-top: 1.3vw;
+}
+@media (orientation: landscape) {
+  .font__subtitle--enchantee {
+    font-size: 3vw;
+  }
 }
 @media (orientation: landscape) and (min-device-width: 992px) {
   .font__subtitle--enchantee {
@@ -366,6 +383,7 @@ td {
 .font__subtitle--alafrancaise {
   font-family: "Cambria";
   font-weight: bold;
+  font-size: 3.5vw;
   color: #c77412;
 }
 .font__subtitle--papilles {
@@ -413,9 +431,9 @@ td {
     font-size: 2vw;
   }
 }
-@media (min-device-width: 992px) and (orientation: landscape) {
+@media (orientation: landscape) and (min-device-width: 992px) {
   .btn--soon {
-    width: 25%;
+    width: 20%;
     font-size: 2vw;
   }
 }
@@ -452,13 +470,7 @@ td {
     width: 10px;
   }
 }
-@media (min-device-width: 992px) and (orientation: landscape) {
-  .btn__dot {
-    height: 20px;
-    width: 20px;
-  }
-}
-@media (min-device-width: 991px) and (max-device-width: 1280px) {
+@media (orientation: landscape) and (min-device-width: 992px) {
   .btn__dot {
     height: 15px;
     width: 15px;
